--- a/src/500.html
+++ b/src/500.html
@@ -7,7 +7,7 @@
 </head>
 <body style="padding: 0; margin: 0; background: #ebebeb; text-align: center; font-family: Arial, Helvetica, sans-serif">
     <div style="width: 600px; height: 470px; position: absolute; top: 50%; left: 50%; margin-top: -235px; margin-left: -300px;">
-        <img src="https://thicongtot.com/public/images/error-500.png" alt="lỗi máy chủ">
+        <img src="/public/images/error-500.png" alt="lỗi máy chủ">
         <h1 style="font-size: 14px; color: #666">Xin lỗi bạn về sự cố này, chúng tôi đang khắc phục vấn đề này. Hãy quay lại sau 5 phút <a style="color: #2d9b00" href="https://thicongtot.com">thicongtot.com</a></h1>
     </div>
 </body>
