--- a/src/index.template.html
+++ b/src/index.template.html
@@ -29,6 +29,7 @@
 
     </style>
     <!--meta-->
+    <!--style_head-->
     <!--preload-links-->
 </head>
 
@@ -36,6 +37,7 @@
     <!-- <div id="skip"><a href="#app">skip to content</a></div> -->
     <div id="app"><!--app-html--></div>
     <script type="module" src="/src/entry-client.js"></script>
+    <!--style-->
 </body>
 
 </html>
