--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+<html lang="vi">
+<head>
+    <title>{{ title }}</title>
+    <meta charset="utf-8">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="/favicon.svg">
+    <meta name="theme-color" content="#f60">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
+
+    <style>
+    #skip a {
+        position: absolute;
+        left: -10000px;
+        top: auto;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+    }
+
+    #skip a:focus {
+        position: static;
+        width: auto;
+        height: auto;
+    }
+
+    </style>
+    {{meta}}
+    {{style_head}}
     <!--preload-links-->
-  </head>
-  <body>
+</head>
+
+<body>
+    <!-- <div id="skip"><a href="#app">skip to content</a></div> -->
     <div id="app"><!--app-html--></div>
     <script type="module" src="/src/entry-client.js"></script>
-  </body>
+    {{style}}
+</body>
 </html>
