--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="/favicon.svg">
     <meta name="theme-color" content="#f60">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
+    <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'none'"> -->
 
     <style>
     #skip a {
